# gl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
cmake/: utility.cmake
doc/: 1.1.org  1.2.org  1.3.org  1.6.org  build-on-msys2.md
include/api/: window.hpp
resource/: README.org
script/: submodule-gen.bash
spike/: b.cpp  glbinding-example.cpp  imgui.cpp
src/: 1.1.hello_window.cpp  1.2.hello_polygon.cpp  1.2.hello_rectangle.cpp  1.2.hello_triangle.cpp  1.3.breath_triangle.cpp  1.3.mix_color_triangle.cpp  1.3.our_own_shader_class-vertex_shader.glsl  1.3.our_own_shader_class.cpp  1.3.red_triangle.cpp  1.3.shader.cpp  1.3.shader.hpp  1.4.texture.cpp  1.4.texture2-fragment.glsl  1.4.texture2.cpp  1.5.transformation-fragment.glsl  1.5.transformation-vertex.glsl  1.5.transformation.cpp  1.6.coordinate_system-fragment.glsl  1.6.coordinate_system-vertex.glsl  1.6.coordinate_system.cpp  1.6.coordinate_system2-fragment.glsl  1.6.coordinate_system2-vertex.glsl  1.6.coordinate_system2.cpp  1.6.coordinate_system3.cpp  a.cpp  b.cpp  c.cpp  sensor_emitter_server.cpp  sensor_emittor_client.cpp  shader.hpp  tut1.cpp  tut2.cpp
